--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "classnames": "^2.2.6",
+    "cose-base": "^2.0.0",
     "cytoscape": "^3.12.1",
+    "cytoscape-fcose": "^2.0.0",
+    "cytoscape-layout-utilities": "^1.0.2",
     "eventemitter3": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
